force-app/main/default/objects/Match_Period__c/Match_Period__c.object-meta.xml
<CustomObject>
    <description>Tracks time-based segments of a fixture (halves, quarters, innings, sets, periods, rounds)</description>
    <label>Match Period</label>
    <nameField>
        <displayFormat>FPD-{00000}</displayFormat>
        <label>Match Period Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Match Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>