force-app/main/default/objects/Match_Period__c/fields/All_Out__c.field-meta.xml
<CustomField>
    <fullName>All_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Out</label>
    <type>Checkbox</type>
</CustomField>