force-app/main/default/objects/Match_Period__c/fields/Away_Score_Cumulative__c.field-meta.xml
<CustomField>
    <fullName>Away_Score_Cumulative__c</fullName>
    <label>Away Score Cumulative</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>