force-app/main/default/objects/Match_Period__c/fields/Behinds_Away__c.field-meta.xml
<CustomField>
    <fullName>Behinds_Away__c</fullName>
    <label>Behinds Away</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>