force-app/main/default/objects/Match_Period__c/fields/Behinds_Home__c.field-meta.xml
<CustomField>
    <fullName>Behinds_Home__c</fullName>
    <label>Behinds Home</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>