force-app/main/default/objects/Match_Period__c/fields/Declared__c.field-meta.xml
<CustomField>
    <fullName>Declared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Declared</label>
    <type>Checkbox</type>
</CustomField>