force-app/main/default/objects/Match_Period__c/fields/Extras__c.field-meta.xml
<CustomField>
    <fullName>Extras__c</fullName>
    <label>Extras</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>