force-app/main/default/objects/Match_Period__c/fields/Home_Score_Cumulative__c.field-meta.xml
<CustomField>
    <fullName>Home_Score_Cumulative__c</fullName>
    <label>Home Score Cumulative</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>