force-app/main/default/objects/Match_Period__c/fields/Match__c.field-meta.xml
<CustomField>
    <fullName>Match__c</fullName>
    <label>Match</label>
    <referenceTo>Match__c</referenceTo>
    <relationshipLabel>Match Periods</relationshipLabel>
    <relationshipName>Match_Periods</relationshipName>
    <type>MasterDetail</type>
</CustomField>