force-app/main/default/objects/Match_Period__c/fields/Overs__c.field-meta.xml
<CustomField>
    <fullName>Overs__c</fullName>
    <label>Overs</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>