force-app/main/default/objects/Match_Period__c/fields/Period_Number__c.field-meta.xml
<CustomField>
    <fullName>Period_Number__c</fullName>
    <label>Period Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>