force-app/main/default/objects/Match_Period__c/fields/Run_Rate__c.field-meta.xml
<CustomField>
    <fullName>Run_Rate__c</fullName>
    <formula>IF(ISBLANK(Overs__c) || Overs__c = 0, NULL, Runs__c / Overs__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Run Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>