force-app/main/default/objects/Match_Period__c/fields/Scoring_Team__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Team__c</fullName>
    <label>Scoring Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Away</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>