force-app/main/default/objects/Match_Period__c/fields/Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Start_DateTime__c</fullName>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>