force-app/main/default/objects/Match_Period__c/recordTypes/Extra_Time.recordType-meta.xml
<RecordType>
    <fullName>Extra_Time</fullName>
    <active>true</active>
    <label>Extra Time</label>
</RecordType>