force-app/main/default/objects/Match_Period__c/recordTypes/Half.recordType-meta.xml
<RecordType>
    <fullName>Half</fullName>
    <active>true</active>
    <label>Half</label>
</RecordType>