force-app/main/default/objects/Match_Period__c/recordTypes/Innings.recordType-meta.xml
<RecordType>
    <fullName>Innings</fullName>
    <active>true</active>
    <label>Innings</label>
</RecordType>