force-app/main/default/objects/Match_Period__c/recordTypes/Overtime.recordType-meta.xml
<RecordType>
    <fullName>Overtime</fullName>
    <active>true</active>
    <label>Overtime</label>
</RecordType>